<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.tvbarthel.apps.cameracolorpicker.activities.ColorDetailActivity">

    <item
        android:id="@+id/menu_color_detail_action_share"
        android:title="@string/menu_color_detail_action_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="10"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_color_detail_action_edit"
        android:title="@string/menu_color_detail_action_edit"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="50"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_color_detail_action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="100"
        android:title="@string/menu_color_detail_action_delete"
        app:showAsAction="ifRoom" />

</menu>
